# 3DRenderer-2.0

./: CMakeLists.txt  compileAndRun.sh  imgui.ini  redoCmake.sh
src/: main.cpp
src/Textura/: Textura.cpp  Textura.h
src/Viewport/: Viewport.cpp  Viewport.h
src/app/: app.cpp  app.h
src/app/DGui/: MainWindow.cpp  MainWindow.h
src/scene/objects/Cylinder/: Cylinder.cpp
src/scene/objects/Mesh3/: Mesh3.h  ParseOBJFile.cpp
src/scene/objects/Sphere/: Sphere.cpp
src/scene/objects/Triangle/: Triangle.cpp  Triangle.h
src/scene/view/: view.cpp
